--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, sans-serif;
-    color: #2E2F42;
+    color: #434455;
+    background-color: #FFFFFF;
     font-size: 16px;
 }
 
@@ -12,24 +13,28 @@ body {
 .nav-logo {
     font-weight: 700;
     font-size: 18px;
-    letter-spacing: 3%;
+    letter-spacing: 0.03em;
     font-family: Raleway, sans-serif;
     text-transform: uppercase;
-    line-height: 1.16;
+    line-height: 1.17;
+    color: #4d5ae5;
 }
 
 .nav-logo:focus {
     color: #404BBF;
 }
-
+.header .studio {
+    color: #2e2f42;
+}
 
 /* NAV-LIST */
 .nav-list {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: #2E2F42;
+    color: #2e2f42;
     font-family: Roboto, sans-serif;
+    letter-spacing: 0.02em;
 }
 
 .nav-list .link:hover,
@@ -43,10 +48,12 @@ body {
 
 /* INFO */
 
-.info {
+.info .info-list .link {
     font-size: 16px;
     line-height: 1.5;
-    color: #2E2F42;
+    color: #434455;
+    font-style: normal;
+    letter-spacing: 0.02em
 }
 
 .info .link:hover,
@@ -56,31 +63,39 @@ body {
 
 /*MAIN*/
 
-.main .header-main {
+.main .main-section {
+    background-color: #2e2f42;
+}
+.main .main-section .header-main {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
-    letter-spacing: .02em;
-    color: #FFFFFF;
-    background-color: #2E2F42;
-}
-
-.main .button-main {
-    color: #FFFFFF;
-    background-color: #4D5AE5;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .04em;
-    cursor: pointer;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    background-color: #2e2f42;
+    text-align: center
 }
 
 /*BUTTON*/
-.main .button-main:hover,
-.main .button-main:focus {
+.main .main-section .button-main {
+    color: #ffffff;
+    background-color: #4d5ae5;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    font-weight: 500
+}
+
+.main .main-section .button-main:hover,
+.main .main-section .button-main:focus {
     background-color: #404BBF;
 }
 
 /*FEATURES*/
+.main .section-features .features-list {
+    background-color: #FFFFFF;
+}
 .main .section-features .header-features {
     font-weight: 500;
     font-size: 20px;
@@ -92,6 +107,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: .02em;
+    color: #434455;
 }
 
 /*IMG*/
@@ -102,8 +118,11 @@ body {
 
 .main .team .main-header-team {
     font-size: 36px;
-    line-height: 1.1;
-    letter-spacing: .02em;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
 
 .main .team .header-team {
@@ -117,96 +136,31 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: .02em;
+    color: #434455;
 }
 
+
+
+                            /*PORTFOLIO*/
 .main .portfolio .main-header-portfolio {
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
     letter-spacing: .02em;
+    text-align: center;
+    text-transform: capitalize;
 }
-
-                            /*banking*/
-.main .portfolio .portfolio-list .banking-header{
+.main .portfolio .portfolio-list .features-header {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: .02em;
 }
-.main .portfolio .portfolio-list .banking-text{
+.main .portfolio .portfolio-list .features-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: .02em;
     color: #434455;
 }
-
-.main .portfolio .portfolio-list .payment-header {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: .02em;
-}
-
-.main .portfolio .portfolio-list .payment-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .02em;
-    color: #434455;
-}
-.main .portfolio .portfolio-list .mediation-header {
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: .02em;
-}
-
-.main .portfolio .portfolio-list .mediation-text {
-font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .02em;
-    color: #434455;
-}
-
-.main .portfolio .portfolio-list .taxi-header {
-font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: .02em;
-}
-
-.main .portfolio .portfolio-list .taxi-text {
-font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .02em;
-    color: #434455;
-}
-
-.main .portfolio .portfolio-list .illustrations-header {
-font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: .02em;
-}
-
-.main .portfolio .portfolio-list .illustrations-text {
-font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .02em;
-    color: #434455;
-}
- .main .portfolio .portfolio-list .courses-header {
-font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: .02em;
- }
-
- .main .portfolio .portfolio-list .courses-text {
-font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: .02em;
-    color: #434455;
- }
-
 .footer {
     background-color: #2E2F42;
 }
