--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,12 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: #2e2f42;
     font-family: Roboto, sans-serif;
     letter-spacing: 0.02em;
+}
+
+.header .nav-list .link {
+    color: #434455;
 }
 
 .header .nav-list .link:hover,
@@ -43,9 +46,6 @@ body {
 .header .nav-list .link:active {
     color: #404BBF;
 }
-
-
-
 
 /* INFO */
 .header .info {
@@ -57,7 +57,7 @@ body {
     line-height: 1.5;
     color: #434455;
     font-style: normal;
-    letter-spacing: 0.02em
+    letter-spacing: 0.02em;
 }
 
 .header .info .info-list .link:hover,
@@ -65,8 +65,7 @@ body {
     color: #404bbf;
 }
 
-/*MAIN*/
-
+/* MAIN */
 .main .main-section {
     background-color: #2e2f42;
 }
@@ -78,10 +77,10 @@ body {
     letter-spacing: 0.02em;
     color: #ffffff;
     background-color: #2e2f42;
-    text-align: center
+    text-align: center;
 }
 
-/*BUTTON*/
+/* BUTTON */
 .main .main-section .button-main {
     color: #ffffff;
     background-color: #4d5ae5;
@@ -89,7 +88,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    font-weight: 500
+    font-weight: 500;
 }
 
 .main .main-section .button-main:hover,
@@ -97,7 +96,7 @@ body {
     background-color: #404BBF;
 }
 
-/*FEATURES*/
+/* FEATURES */
 .main .section-features .features-list {
     background-color: #FFFFFF;
 }
@@ -106,19 +105,18 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
 .main .section-features .text-features {
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
-/*TEAM*/
-
+/* TEAM */
 .main .team {
     background-color: #F4F4FD;
 }
@@ -132,7 +130,7 @@ body {
     color: #2e2f42;
 }
 
-.main .team .team-list {
+.main .team .team-item {
     background-color: #FFFFFF;
 }
 
@@ -140,44 +138,44 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
 .main .team .text-team {
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
-
-
-/*PORTFOLIO*/
+/* PORTFOLIO */
 .main .portfolio .main-header-portfolio {
     font-size: 36px;
     line-height: 1.11;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
 }
 
 .main .portfolio .portfolio-list .features-header {
+
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
 .main .portfolio .portfolio-list .features-text {
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: .02em;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 
+/* FOOTER */
 .footer {
     background-color: #2e2f42;
 }
