--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
     line-height: 1.5;
     font-family: Roboto, sans-serif;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .header .nav-list .link {
@@ -130,11 +131,11 @@ body {
     color: #2e2f42;
 }
 
-.main .team .team-item {
+.main .team .team-list .team-item {
     background-color: #FFFFFF;
 }
 
-.main .team .header-team {
+.main .team .team-list .header-team {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -142,7 +143,7 @@ body {
     color: #2e2f42;
 }
 
-.main .team .text-team {
+.main .team  .team-list .text-team {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
