--- a/css/style.css
+++ b/css/style.css
@@ -190,3 +190,16 @@ body {
 .footer .footer-studio {
     color: #f4f4fd;
 }
+.footer .nav-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.footer .nav-logo:focus {
+    color: #404BBF;
+}
