--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ body {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    text-transform: capitalize;
     color: #2e2f42;
 }
 
@@ -165,6 +166,7 @@ body {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .main .portfolio .portfolio-list .features-header {
