--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ body {
     color: #2e2f42;
 }
 
-.main .team .team-list  {
+.main .team .team-list .team-item {
     background-color: #FFFFFF;
 }
 
