Фікси logo, лінків

--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,18 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
+ul {
+    list-style-type: none;
+}
 .header {
     color: #434455;
 }
-
+.link {
+    text-decoration: none;
+}
 /* LOGO */
 .header .nav-logo {
     font-family: Raleway, sans-serif;
@@ -20,6 +26,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    text-decoration: none;
 }
 
 .header .nav-logo:focus {
@@ -32,7 +39,6 @@ body {
 
 /* NAV-LIST */
 .header .nav-list {
-    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -56,7 +62,6 @@ body {
 }
 
 .header .info .info-list .link {
-    font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -74,7 +79,6 @@ body {
 }
 
 .main .main-section .header-main {
-    font-family: Roboto, sans-serif;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -106,7 +110,6 @@ body {
 }
 
 .main .section-features .header-features {
-    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -115,7 +118,6 @@ body {
 }
 
 .main .section-features .text-features {
-    font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -128,7 +130,6 @@ body {
 }
 
 .main .team .main-header-team {
-    font-family: Roboto, sans-serif;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
@@ -142,7 +143,6 @@ body {
 }
 
 .main .team .team-list .header-team {
-    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -151,7 +151,6 @@ body {
 }
 
 .main .team .team-list .text-team {
-    font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -160,7 +159,6 @@ body {
 
 /* PORTFOLIO */
 .main .portfolio .main-header-portfolio {
-    font-family: Roboto, sans-serif;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
@@ -170,7 +168,6 @@ body {
 }
 
 .main .portfolio .portfolio-list .features-header {
-    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -179,7 +176,6 @@ body {
 }
 
 .main .portfolio .portfolio-list .features-text {
-    font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -192,7 +188,6 @@ body {
 }
 
 .footer .footer-text {
-    font-family: Roboto, sans-serif;
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -210,6 +205,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    text-decoration: none;
 }
 
 .footer .nav-logo:focus {
