--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,143 @@
+/* BASIC STYLES*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul {
+    margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    display: block;
+}
+
 body {
-    font-family: Roboto, sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
 
-ul {
-    list-style-type: none;
+/* CONTAINER */
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+/* HEADER */
 .header {
-    color: #434455;
+    border-bottom: 1px solid #e7e9fc;
 }
-.link {
-    text-decoration: none;
+
+.header .container {
+    display: flex;
 }
+
+.navigation-menu {
+    display: flex;
+    align-items: center;
+}
+
 /* LOGO */
-.header .nav-logo {
-    font-family: Raleway, sans-serif;
+.nav-logo {
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    text-decoration: none;
+    margin-right: 76px;
 }
 
-.header .nav-logo:focus {
+.nav-logo:focus {
     color: #404BBF;
 }
 
-.header .studio {
+.studio {
     color: #2e2f42;
 }
 
-/* NAV-LIST */
-.header .nav-list {
+.footer-studio {
+    color: #f4f4fd;
+}
+
+/* NAV */
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
+
+.nav-list .link {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
 }
 
-.header .nav-list .link {
-    color: #2e2f42;
-}
-
-.header .nav-list .link:hover,
-.header .nav-list .link:focus,
-.header .nav-list .link:active {
+.nav-list .link:hover,
+.nav-list .link:focus,
+.nav-list .link:active {
     color: #404BBF;
 }
 
-/* INFO */
-.header .info {
+/* ADDRESS */
+.info {
     font-style: normal;
+    margin-left: auto;
 }
 
-.header .info .info-list .link {
+.info-list {
+    display: flex;
+    gap: 40px;
+}
+
+.info-list .link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.header .info .info-list .link:hover,
-.header .info .info-list .link:focus {
+.info-list .link:hover,
+.info-list .link:focus {
     color: #404BBF;
 }
 
 /* MAIN */
-.main .main-section {
+.main-section {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
-.main .main-section .header-main {
+.main-section .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+}
+
+.header-main {
+    max-width: 496px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -87,127 +146,189 @@ ul {
     text-align: center;
 }
 
-/* BUTTON */
-.main .main-section .button-main {
-    font-family: Roboto, sans-serif;
-    color: #ffffff;
-    background-color: #4d5ae5;
+.button-main {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    font-weight: 500;
+    color: #ffffff;
+    background-color: #4d5ae5;
     cursor: pointer;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 
-.main .main-section .button-main:hover,
-.main .main-section .button-main:focus {
+.button-main:hover,
+.button-main:focus {
     background-color: #404BBF;
 }
 
 /* FEATURES */
-.main .section-features .features-list {
-    background-color: #FFFFFF;
+.section-features {
+    padding: 120px 0;
 }
 
-.main .section-features .header-features {
+.features-list {
+    display: flex;
+    gap: 24px;
+}
+
+.main-section-list {
+    width: calc((100% - 72px) / 4);
+}
+
+.header-features {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
-.main .section-features .text-features {
+.text-features {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 /* TEAM */
-.main .team {
+.team {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
-.main .team .main-header-team {
+.main-header-team {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 
-.main .team .team-list .team-item {
+.team-list {
+    display: flex;
+    gap: 24px;
+}
+
+.team-item {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 1px 6px rgba(46, 47, 66, 0.08);
+   
 }
 
-.main .team .team-list .header-team {
+.description-co-workers {
+    padding: 32px 0;
+    text-align: center;
+}
+
+.header-team {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
-.main .team .team-list .text-team {
+.text-team {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-/* PORTFOLIO */
-.main .portfolio .main-header-portfolio {
+
+.portfolio {
+    padding: 120px 0;
+}
+
+.main-header-portfolio {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;
     text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
 }
 
-.main .portfolio .portfolio-list .features-header {
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-card-list {
+    width: calc((100% - 48px) / 3);
+    border: 1px solid #e7e9fc;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08);
+    
+}
+
+.portfolio-card-list img {
+    width: 100%;
+    height: auto;
+}
+
+.description-portfolio {
+    padding: 32px 16px;
+    border-top: none;
+}
+
+.features-header {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
-.main .portfolio .portfolio-list .features-text {
+.features-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-/* FOOTER */
+/* Футер */
 .footer {
     background-color: #2e2f42;
-}
-
-.footer .footer-text {
-    color: #F4F4FD;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-.footer .footer-studio {
+    padding: 100px 0;
     color: #f4f4fd;
 }
 
 .footer .nav-logo {
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
-.footer .nav-logo:focus {
-    color: #404BBF;
+.footer-text {
+    max-width: 264px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
