--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ a {
 img {
     display: block;
 }
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 body {
     font-family: "Roboto", sans-serif;
@@ -39,6 +44,7 @@ body {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    align-items: center;
 }
 
 .portfolio .container {
@@ -47,18 +53,23 @@ body {
 
 /* HEADER */
 .header {
-    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+            0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+            0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+        border-bottom: 1px solid #e7e9fc;
 }
 
 .header .container {
     display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #e7e9fc;
 }
+
 
 .navigation-menu {
     display: flex;
     align-items: center;
 }
-
 /* LOGO */
 .nav-logo {
     font-family: "Raleway", sans-serif;
@@ -77,25 +88,39 @@ body {
 
 .studio {
     color: #2e2f42;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-studio {
-    color: #f4f4fd;
+.studio:hover {
+    color: rgba(64, 75, 191, 1);
 }
+
+
 
 /* NAV */
-.nav-list {
+.nav-list  {
     display: flex;
     gap: 40px;
+    align-items: center;
+}
+
+
+
+.nav-list:hover {
+ color: #404BBF;
 }
 
 .nav-list .link {
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .nav-list .link:hover,
@@ -104,6 +129,19 @@ body {
     color: #404BBF;
 }
 
+.nav-list .link-studio {
+    color:#404bbf;
+}
+.nav-list .link-studio:after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  border-radius: 2px;
+  color: #404bbf;
+}
 /* ADDRESS */
 .info {
     font-style: normal;
@@ -120,6 +158,9 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    position: relative;
 }
 
 .info-list .link:hover,
@@ -131,8 +172,33 @@ body {
 .main-section {
     background-color: #2e2f42;
     padding: 188px 0;
+    background-image: linear-gradient(
+        to bottom,
+       rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    )
+    ;
+    background-image: url(/images/people-office\ 1.jpg);
+    box-shadow: inset 0 0 10px #2E2F42B2;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    max-width: 1440px;
+    margin: 0 auto;
+    
 }
-
+.main-section-list .features-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 264px;
+    height: 112px;
+    border: 1px solid rgba(142, 143, 153, 1);
+        border-radius: 4px;
+        background: rgba(244, 244, 253, 1);
+        margin-bottom: 8px;
+}
+ 
 .main-section .container {
     display: flex;
     flex-direction: column;
@@ -163,13 +229,14 @@ body {
     height: 56px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-main:hover,
 .button-main:focus {
     background-color: #404BBF;
 }
-
+ 
 /* FEATURES */
 .section-features {
     padding: 120px 0;
@@ -178,10 +245,21 @@ body {
 .features-list {
     display: flex;
     gap: 24px;
+    justify-content: space-between;
 }
 
 .main-section-list {
     width: calc((100% - 72px) / 4);
+
+}
+.main-section .features {
+    text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  color: #2e2f42;
 }
 
 .header-features {
@@ -219,6 +297,7 @@ body {
     padding: 120px 0;
 }
 
+
 .main-header-team {
     font-size: 36px;
     line-height: 1.11;
@@ -231,7 +310,7 @@ body {
 
 .team-list {
     display: flex;
-    gap: 24px;
+        gap: 24px;
 }
 
 .team-item {
@@ -242,8 +321,32 @@ body {
 }
 
 .description-co-workers {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 32px 0;
     text-align: center;
+    gap: 8px;
+
+}
+
+
+
+.team-list-li {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-li:hover {
+    
+}
+
+.team-list-ul {
+    display: flex;
+        justify-content: center;
+        gap: 24px;
+
 }
 
 .header-team {
@@ -253,6 +356,22 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+}
+
+.team-social-icon {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social-icon:focus,
+.team-social-icon:hover {
+  background-color: #404bbf;
 }
 
 .text-team {
@@ -290,13 +409,46 @@ body {
     width: calc((100% - 48px) / 3);
     border: 1px solid #e7e9fc;
     border-radius: 0 0 4px 4px;
-    box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4,
+        0,
+        0.2,
+        1);
+        cursor: pointer;
+}
+.portfolio-card-list:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+            0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+            0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-card-list:hover p {
+    transform: translateY(0%);
+}
+.div-overlay {
+    overflow: hidden;
+    position: relative;
 }
 
 .portfolio-card-list img {
     width: 100%;
     height: auto;
 }
+.portfolio-cards-img {
+    max-width: 100%;
+}
+.overlay-text {
+    position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .description-portfolio {
     padding: 32px 16px;
@@ -305,6 +457,8 @@ body {
     border-left: 1px solid #e7e9fc;
     border-top: none;
 }
+
+ 
 
 .features-header {
     font-weight: 500;
@@ -328,14 +482,68 @@ body {
     padding: 100px 0;
     color: #f4f4fd;
 }
-
-.footer .nav-logo {
-    display: inline-block;
-    margin-bottom: 16px;
+.footer .container {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
 }
+.footer .footer-logo {
+    display: inline-block;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
+        margin-bottom: 16px;
 
+}
+.footer-span {
+    color: #f4f4fd;
+}
+.footer-logo-div {
+    margin-right: 120px;
+}
 .footer-text {
     max-width: 264px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+.footer-social-text {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    color: rgba(255, 255, 255, 1);
+}
+
+.footer-social-media-item {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-list {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-links {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-links:focus,
+.footer-social-links:hover {
+    background-color: #31d0aa;
+}
+
+.footer-icon-svg {
+    fill: #f4f4fd;
 }
