--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
     color: #2e2f42;
     padding: 24px 0;
     position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list .link:hover,
@@ -130,17 +130,26 @@ body {
 }
 
 .nav-list .link-studio {
-    color:#404bbf;
+    color: #2e2f42;
+   
 }
+
 .nav-list .link-studio:after {
-  content: '';
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  border-radius: 2px;
-  color: #404bbf;
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404BBF;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-list .link-studio:hover:after,
+.nav-list .link-studio:focus:after {
+    opacity: 1;
 }
 /* ADDRESS */
 .info {
