--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,9 @@ body {
 /* HEADER */
 .header {
     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
-            0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-            0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-        border-bottom: 1px solid #e7e9fc;
+        0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+        0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header .container {
@@ -65,12 +65,11 @@ body {
     border-bottom: 1px solid #e7e9fc;
 }
 
-
 .navigation-menu {
     display: flex;
     align-items: center;
 }
-/* LOGO */
+
 .nav-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -96,19 +95,10 @@ body {
     color: rgba(64, 75, 191, 1);
 }
 
-
-
-/* NAV */
-.nav-list  {
+.nav-list {
     display: flex;
     gap: 40px;
     align-items: center;
-}
-
-
-
-.nav-list:hover {
- color: #404BBF;
 }
 
 .nav-list .link {
@@ -119,7 +109,6 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
-    position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -131,12 +120,13 @@ body {
 
 .nav-list .link-studio {
     color: #2e2f42;
-   
+    position: relative;
 }
 
 .nav-list .link-studio:after {
     content: '';
     width: 100%;
+    display: block;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -151,7 +141,7 @@ body {
 .nav-list .link-studio:focus:after {
     opacity: 1;
 }
-/* ADDRESS */
+
 .info {
     font-style: normal;
     margin-left: auto;
@@ -167,8 +157,7 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
 }
 
