--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
     box-shadow: inset 0 0 10px #2E2F42B2;
     max-width: 1440px;
     margin: 0 auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office\ 1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office-1.jpg);
        
 }
 .main-section-list .features-card {
