--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ a {
 img {
     display: block;
 }
+
 *,
 *::before,
 *::after {
@@ -136,13 +137,6 @@ body {
     position: absolute;
     left: 0;
     bottom: -1px;
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-list .link-studio:hover:after,
-.nav-list .link-studio:focus:after {
-    opacity: 1;
 }
 
 .info {
@@ -168,6 +162,7 @@ body {
 .info-list .link:active {
     color: #404BBF;
 }
+
 /* MAIN */
 .main-section {
     background-color: #2e2f42;
@@ -175,24 +170,11 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    box-shadow: inset 0 0 10px #2E2F42B2;
     max-width: 1440px;
     margin: 0 auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office-1.jpg);
-       
 }
-.main-section-list .features-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 264px;
-    height: 112px;
-    border: 1px solid rgba(142, 143, 153, 1);
-        border-radius: 4px;
-        background: rgba(244, 244, 253, 1);
-        margin-bottom: 8px;
-}
- 
+
 .main-section .container {
     display: flex;
     flex-direction: column;
@@ -230,7 +212,7 @@ body {
 .button-main:focus {
     background-color: #404BBF;
 }
- 
+
 /* FEATURES */
 .section-features {
     padding: 120px 0;
@@ -243,17 +225,29 @@ body {
 }
 
 .main-section-list {
-    width: calc((100% - 72px) / 4);
-
+    flex-basis: calc((100% - 72px) / 4);
 }
-.main-section .features {
+
+.main-section-list .features-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 264px;
+    height: 112px;
+    border: 1px solid rgba(142, 143, 153, 1);
+    border-radius: 4px;
+    background: rgba(244, 244, 253, 1);
+    margin-bottom: 8px;
+}
+
+.features {
     text-align: center;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  color: #2e2f42;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    color: #2e2f42;
 }
 
 .header-features {
@@ -291,7 +285,6 @@ body {
     padding: 120px 0;
 }
 
-
 .main-header-team {
     font-size: 36px;
     line-height: 1.11;
@@ -304,12 +297,12 @@ body {
 
 .team-list {
     display: flex;
-        gap: 24px;
+    gap: 24px;
 }
 
 .team-item {
     background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 1px rgba(46, 47, 66, 0.08), 0 1px 1px rgba(46, 47, 66, 0.16), 0 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -321,27 +314,37 @@ body {
     padding: 32px 0;
     text-align: center;
     gap: 8px;
-
-}
-
-
-
-.team-list-li {
-    width: 40px;
-    height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
-
-.team-list-li:hover {
-    
 }
 
 .team-list-ul {
     display: flex;
-        justify-content: center;
-        gap: 24px;
+    justify-content: center;
+    gap: 24px;
+}
 
+.team-list-li {
+    width: 40px;
+    height: 40px;
+}
+
+.team-social-icon {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social-icon:focus,
+.team-social-icon:hover {
+    background-color: #404bbf;
+}
+
+.icon-fill {
+    fill: #f4f4fd;
 }
 
 .header-team {
@@ -351,25 +354,6 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-}
-
-.team-social-icon {
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-social-icon:focus,
-.team-social-icon:hover {
-  background-color: #404bbf;
-}
-.socialcs-icon {
-    fill: #f4f4fd;
 }
 
 .text-team {
@@ -383,8 +367,6 @@ body {
 .portfolio {
     padding: 120px 0;
 }
-
-
 
 .main-header-portfolio {
     font-size: 36px;
@@ -404,49 +386,44 @@ body {
 }
 
 .portfolio-card-list {
-    width: calc((100% - 48px) / 3);
-    border: 1px solid #e7e9fc;
-    border-radius: 0 0 4px 4px;
-    transition: box-shadow 250ms cubic-bezier(0.4,
-        0,
-        0.2,
-        1);
-        cursor: pointer;
+    flex-basis: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 }
+
 .portfolio-card-list:hover {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-            0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-            0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+        0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+        0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
 .portfolio-card-list:hover p {
     transform: translateY(0%);
 }
+
 .div-overlay {
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
-.portfolio-card-list img {
-    width: 100%;
-    height: auto;
-}
 .portfolio-cards-img {
     max-width: 100%;
 }
+
 .overlay-text {
     position: absolute;
-        top: 0;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-        padding: 40px 32px;
-        background-color: #4d5ae5;
-        width: 100%;
-        height: 100%;
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .description-portfolio {
     padding: 32px 16px;
@@ -455,8 +432,6 @@ body {
     border-left: 1px solid #e7e9fc;
     border-top: none;
 }
-
- 
 
 .features-header {
     font-weight: 500;
@@ -480,34 +455,39 @@ body {
     padding: 100px 0;
     color: #f4f4fd;
 }
-.footer .container {
-        display: flex;
-        flex-direction: row;
-        align-items: baseline;
-}
-.footer .footer-logo {
-    display: inline-block;
-        font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
-        margin-bottom: 16px;
 
+.footer .container {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
 }
+
+.footer-logo {
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+}
+
 .footer-span {
     color: #f4f4fd;
 }
+
 .footer-logo-div {
     margin-right: 120px;
 }
+
 .footer-text {
     max-width: 264px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
 .footer-social-text {
     font-weight: 500;
     line-height: 1.5;
@@ -539,7 +519,7 @@ body {
 
 .footer-social-links:focus,
 .footer-social-links:hover {
-    background-color: #31d0aa;
+    background-color: #404bbf;
 }
 
 .footer-icon-svg {
