--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,7 @@ body {
 
 .footer-social-links:focus,
 .footer-social-links:hover {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 .footer-icon-svg {
