--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,7 @@ body {
     background-color: #4d5ae5;
     border: none;
     border-radius: 4px;
+    margin-left: 16px;
 }
 
 /* MODAL OVERLAY */
