Фікс футера й чекбокса

--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
+    
 }
 
 .form-button {
@@ -572,6 +573,9 @@ body {
     background-color: #4d5ae5;
     border: none;
     border-radius: 4px;
+    
+}
+.form-button .footer-icon-svg {
     margin-left: 16px;
 }
 
@@ -719,6 +723,7 @@ body {
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
 }
 
 .checkbox-span {
@@ -736,7 +741,7 @@ body {
 }
 
 .input-checked:checked+.checkbox-label .checkbox-span {
-    background-color: #4d5ae5;
+    background-color: #404bbf;;
     fill: #f4f4fd;
     border: none;
 }
@@ -763,4 +768,11 @@ body {
 
 .checkbox-conteiner {
     margin-bottom: 24px;
+}
+
+.checkbox-conteiner .checkbox-label {
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8e8f99;
 }
