Створено меню для телефону й адаптовано хедер з частиною мейну

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a {
 
 img {
     display: block;
+    max-width: 100%;
 }
 
 *,
@@ -36,6 +37,26 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+/* Container Phone 320px */
+@media screen and (min-width: 320px) {
+    .container {
+        width: 320px;
+    }
+}
+
+/* Container Tablet 768px */
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+    }
+}
+
+/* Container Desktop 1158px */
+@media screen and (min-width: 1158px) {
+    .container {
+        width: 1158px;
+    }
 }
 
 /* CONTAINER */
@@ -138,6 +159,11 @@ body {
     left: 0;
     bottom: -1px;
 }
+@media (max-width: 767px) {
+    .nav-list {
+        display: none;
+    }
+}
 
 .info {
     font-style: normal;
@@ -162,6 +188,208 @@ body {
 .info-list .link:active {
     color: #404BBF;
 }
+@media (max-width: 767px) {
+    .info {
+        display: none;
+    }
+}
+@media screen and (min-width: 1158px) {
+    .info {
+        padding-top: 24px;
+        padding-bottom: 24px;
+        display: flex;
+        gap: 40px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .info-list .link {
+        color: #434455;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+        .info-list .link {
+        font-size: 16px;
+        line-height: 1.5;
+        display: inline-block;
+    }
+}
+/* MOBILE MENU */
+@media screen and (min-width: 768px) {
+    .mobile-menu__open {
+        display: none;
+    }
+}
+
+.mobile-menu__open {
+    padding: 24px 0;
+    line-height: 0;
+    background-color: transparent;
+    border: none;
+    margin-left: auto;
+}
+
+.mobile-menu__open-icon {}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+    visibility: visible;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+
+@media screen and (max-width: 767px) {
+    .mobile-menu-wrap {
+        max-width: 428px;
+    }
+}
+
+.mobile-menu-wrap {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 40px 40px 40px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
+}
+
+.menu-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-close:hover,
+.menu-close:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+
+.icon-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-item:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.mobile-menu-nav {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-nav:hover,
+.mobile-menu-nav:focus {
+    color: #404bbf;
+}
+
+.mobile-menu-nav.current {
+    color: #404bbf;
+}
+
+.mobile-address {
+    margin-top: auto;
+    margin-bottom: 40px;
+}
+
+.contacts-item:last-child {
+    margin-top: 40px;
+}
+
+.mobile-contacts-tel {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #4d5ae5;
+}
+
+.mobile-contacts-mail {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mobile-social-list {
+    display: flex;
+    justify-content: start;
+    gap: 56px;
+}
+
+.mobile-social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-icon {
+    fill: #f4f4fd;
+}
+
+.mobile-social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-link:focus,
+.mobile-social-link:hover {
+    background-color: #404bbf;
+}
+
+@media screen and (max-width: 427px) {
+    .mobile-social-list {
+        gap: calc((100% - 160px) / 4);
+    }
+
+    .mobile-contacts-tel {
+        font-size: 24px;
+    }
+}
 
 /* MAIN */
 .main-section {
@@ -174,7 +402,17 @@ body {
     margin: 0 auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-1.jpg);
 }
+@media screen and (max-width: 1157px) {
+    .main-section {
+        padding: 112px 0;
+    }
+}
 
+@media screen and (min-width: 1158px) {
+    .main-section {
+        padding: 188px 0;
+    }
+}
 .main-section .container {
     display: flex;
     flex-direction: column;
@@ -217,12 +455,56 @@ body {
 .section-features {
     padding: 120px 0;
 }
-
+@media screen and (max-width: 1157px) {
+    .section-features {
+        padding: 96px 0;
+    }
+}
+@media screen and (min-width: 1158px) {
+    .section-features {
+        padding: 120px 0;
+    }
+}
 .features-list {
     display: flex;
     gap: 24px;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 767px) {
+ .features-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+ }
+}
+@media screen and (min-width: 768px) {
+    .features-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px ;
+        row-gap: 72px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .features-list {
+        flex-wrap: nowrap;
+        gap: 24px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .main-section-list {
+        width: calc((100% - 24px) / 2);
+    }
+}
+@media screen and (min-width: 1158px) {
+    .main-section-list {
+        width: calc((100% - 72px) / 4);
+    }
+}
+
 
 .main-section-list {
     flex-basis: calc((100% - 72px) / 4);
@@ -238,6 +520,12 @@ body {
     border-radius: 4px;
     background: rgba(244, 244, 253, 1);
     margin-bottom: 8px;
+}
+
+@media screen and (max-width: 1157px) {
+    .features-card {
+        display: none;
+    }
 }
 
 .features {
@@ -258,14 +546,51 @@ body {
     color: #2e2f42;
     margin-bottom: 8px;
 }
-
+@media screen and (max-width: 767px) {
+    .header-features {
+        display: flex;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .header-features {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11111;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+    }
+}
 .text-features {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
+@media screen and (max-width: 767px) {
+    .text-features {
+        display: flex;
+        justify-content: center;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+    }
+}
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .text-features {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+    }
+}
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -556,7 +881,6 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
-    
 }
 
 .form-button {
@@ -573,8 +897,8 @@ body {
     background-color: #4d5ae5;
     border: none;
     border-radius: 4px;
-    
 }
+
 .form-button .footer-icon-svg {
     margin-left: 16px;
 }
@@ -664,6 +988,7 @@ body {
     margin-bottom: 4px;
     flex-direction: column;
 }
+
 #user-comment::placeholder {
     color: #2E2F4266;
 }
@@ -746,7 +1071,7 @@ body {
 }
 
 .input-checked:checked+.checkbox-label .checkbox-span {
-    background-color: #404bbf;;
+    background-color: #404bbf;
     fill: #f4f4fd;
     border: none;
 }
@@ -767,7 +1092,6 @@ body {
     position: relative;
 }
 
-
 .comment-div {
     margin-bottom: 16px;
 }
@@ -777,11 +1101,12 @@ body {
 }
 
 .checkbox-conteiner .checkbox-label {
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: #8e8f99;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
 }
+
 #email::placeholder {
     color: #FFFFFF;
 }
