--- a/css/style.css
+++ b/css/style.css
@@ -237,13 +237,10 @@ ul {
 }
 
 .main-section {
-    background-color: #2e2f42;
-    padding: 188px 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    max-width: 1440px;
-    margin: 0 auto;
+    width: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/HERO/hero-desktop-1x.jpg);
 }
 
@@ -1192,7 +1189,6 @@ ul {
     color: #4d5ae5;
 }
 
-/* Mobile Menu Styles from Програміст 2 */
 @media screen and (min-width: 768px) {
     .mobile-menu__open {
         display: none;
